--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -19,12 +19,13 @@
         android:layout_height="50dp" />
 
     <TextView
+        android:id="@+id/splashscreen_text"
         android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Updating..."/>
+        android:text="@string/connecting"/>
 
 
 </RelativeLayout>
