--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
 
     <color name="darkText">#333333</color>
     <color name="lightText">#999999</color>
-    <color name="separator">#dddddd</color>
+    <color name="separator">#cecece</color>
+    <color name="mihome_item_background">#f5f5f5</color>
 </resources>
