--- a/app/src/main/res/layout/fragment_main_panel.xml
+++ b/app/src/main/res/layout/fragment_main_panel.xml
@@ -7,17 +7,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/swiperefresh"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <ListView
-            android:id="@android:id/list"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_height="match_parent"
+        android:background="@color/cardview_light_background"
+        />
 
 </RelativeLayout>
