--- a/app/src/main/res/layout/mihome_item.xml
+++ b/app/src/main/res/layout/mihome_item.xml
@@ -10,7 +10,7 @@
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/mi_item_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginBottom="8dp"
@@ -21,28 +21,42 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/mi_item_item_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:textSize="@dimen/text_size_m"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        android:textColor="@color/darkText"
+        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
+        app:layout_constraintTop_toTopOf="@+id/mi_item_image"
         tools:text="Depuratore" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/mi_item_plugin_latest_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="16dp"
         android:textSize="@dimen/text_size_xxs"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toTopOf="@+id/mi_item_plugin_version"
+        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
+        tools:text="v.023123" />
+
+    <TextView
+        android:id="@+id/mi_item_plugin_version"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        android:textSize="@dimen/text_size_xxs"
+        android:textStyle="italic"
+        app:layout_constraintBottom_toBottomOf="@+id/mi_item_image"
+        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
         tools:text="v.023123" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/mi_item_flag"
         android:layout_width="90dp"
         android:layout_height="match_parent"
         android:scaleType="fitXY"
