--- a/app/src/main/res/drawable/mihome_item_border.xml
+++ b/app/src/main/res/drawable/mihome_item_border.xml
@@ -1,11 +1,6 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners
-        android:radius="2dp"
-        android:topRightRadius="0dp"
-        android:bottomRightRadius="0dp"
-        android:bottomLeftRadius="0dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/separator" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="@color/mihome_item_background"/>
+    <stroke android:width="3dp" android:color="@color/mihome_item_background" />
+    <corners android:radius="10dp"/>
+    <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
