--- a/app/src/main/res/layout/fragment_empty.xml
+++ b/app/src/main/res/layout/fragment_empty.xml
@@ -3,10 +3,23 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
+        android:id="@+id/empty_fragment_text"
+        android:textSize="@dimen/text_size_m"
+        android:layout_margin="@dimen/margin_m"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_centerInParent="true"
-        android:textColor="#444444"
-        android:text="@string/no_content_here"/>
+        android:textColor="#444444"/>
+
+    <Button
+        android:id="@+id/empty_fragment_telegram_link_button"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginBottom="@dimen/margin_m"
+        android:text="@string/mihome_telegram_link"/>
 
 </RelativeLayout>
