--- a/app/src/main/res/layout/mihome_item.xml
+++ b/app/src/main/res/layout/mihome_item.xml
@@ -27,8 +27,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="@dimen/text_size_m"
+        android:ellipsize="end"
+        android:maxLength="20"
+        android:maxLines="2"
         android:textColor="@color/darkText"
+        android:textSize="@dimen/text_size_m"
         app:layout_constraintStart_toEndOf="@+id/mi_item_image"
         app:layout_constraintTop_toTopOf="@+id/mi_item_image"
         tools:text="Depuratore" />
