Revert "Changed maxlengh to maxems to use ellipsize in Textviews"
This reverts commit fee4e669bcd248048ccbe4b7c0cd967eebd13179.

--- a/app/src/main/res/layout/mihome_compact_item.xml
+++ b/app/src/main/res/layout/mihome_compact_item.xml
@@ -30,7 +30,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
         android:ellipsize="end"
-        android:maxEms="13"
+        android:maxLength="13"
         android:minLines="1"
         android:textColor="@color/darkText"
         android:textSize="@dimen/text_size_s"
