--- a/app/src/main/res/layout/mihome_compact_item.xml
+++ b/app/src/main/res/layout/mihome_compact_item.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mi_item_container"
+    android:id="@+id/mireplacer_dialog_container"
     android:layout_width="match_parent"
     android:layout_height="55dp"
     android:layout_margin="@dimen/margin_m"
