--- a/app/src/main/res/layout/mihome_dialog.xml
+++ b/app/src/main/res/layout/mihome_dialog.xml
@@ -73,6 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
         android:textColor="?attr/colorPrimaryDark"
         android:textSize="@dimen/text_size_s"
@@ -86,8 +87,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginBottom="8dp"
-        android:textColor="?android:attr/colorPrimaryDark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="@dimen/text_size_s"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
