--- a/app/src/main/res/layout/mihome_item.xml
+++ b/app/src/main/res/layout/mihome_item.xml
@@ -3,21 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mireplacer_dialog_container"
-    android:orientation="vertical"
-    android:layout_margin="@dimen/margin_m"
     android:layout_width="match_parent"
     android:layout_height="130dp"
+    android:layout_margin="@dimen/margin_m"
     android:background="@drawable/mihome_item_border"
-    android:elevation="5dp">
+    android:elevation="5dp"
+    android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/mi_item_image"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,8 +26,8 @@
         android:id="@+id/mi_item_item_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@color/darkText"
@@ -43,8 +43,8 @@
         android:id="@+id/mi_item_plugin_latest_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:textSize="@dimen/text_size_xxs"
         android:textStyle="italic"
         app:layout_constraintBottom_toTopOf="@+id/mi_item_plugin_version"
@@ -55,8 +55,8 @@
         android:id="@+id/mi_item_plugin_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
         android:textSize="@dimen/text_size_xxs"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/mi_item_image"
