--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,28 +5,28 @@
     android:background="@color/colorPrimary">
 
     <ImageView
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
+        android:layout_width="150dp"
         android:layout_marginBottom="30dp"
-        android:src="@drawable/mi_logo" />
+        android:layout_height="match_parent"
+        android:src="@drawable/mi_logo"/>
 
     <ProgressBar
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="50dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp" />
 
     <TextView
         android:id="@+id/splashscreen_text"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="15dp"
-        android:text="@string/connecting"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:text="@string/connecting"/>
 
 
 </RelativeLayout>
