--- a/app/src/main/res/layout/fragment_main_panel.xml
+++ b/app/src/main/res/layout/fragment_main_panel.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cardview_light_background" />
+        android:background="@color/cardview_light_background"
+        />
 
 </RelativeLayout>
