--- a/app/src/main/res/layout/mihome_item.xml
+++ b/app/src/main/res/layout/mihome_item.xml
@@ -5,7 +5,10 @@
     android:id="@+id/mireplacer_dialog_container"
     android:layout_width="match_parent"
     android:layout_height="130dp"
-    android:layout_margin="@dimen/margin_m"
+    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="15dp"
+    android:layout_marginRight="15dp"
+    android:layout_marginTop="5dp"
     android:background="@drawable/mihome_item_border"
     android:elevation="5dp"
     android:orientation="vertical">
@@ -13,55 +16,67 @@
 
     <ImageView
         android:id="@+id/mi_item_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/mi_item_item_name"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="240dp"
+        android:layout_height="24dp"
+        android:layout_marginTop="4dp"
+        android:drawableBottom="?attr/colorPrimary"
         android:ellipsize="end"
-        android:maxLines="2"
+        android:gravity="bottom"
+        android:maxLines="1"
         android:textColor="@color/darkText"
         android:textSize="@dimen/text_size_s"
         app:layout_constraintEnd_toStartOf="@+id/mi_item_flag"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
-        app:layout_constraintTop_toTopOf="@+id/mi_item_image"
+        app:layout_constraintStart_toStartOf="@+id/mi_item_image"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_default="wrap"
-        tools:text="Depuratore per la casa " />
+        tools:text="Nome del dispositivo" />
 
     <TextView
         android:id="@+id/mi_item_plugin_latest_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
         android:textSize="@dimen/text_size_xxs"
         android:textStyle="italic"
-        app:layout_constraintBottom_toTopOf="@+id/mi_item_plugin_version"
-        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
-        tools:text="v.023123" />
+        app:layout_constraintBottom_toBottomOf="@+id/mi_item_image"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        tools:text="v.00000" />
 
     <TextView
         android:id="@+id/mi_item_plugin_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
+        android:gravity="center"
         android:textSize="@dimen/text_size_xxs"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/mi_item_image"
-        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
-        tools:text="v.023123" />
+        app:layout_constraintEnd_toStartOf="@+id/mi_icon_status"
+        tools:text="v.00000" />
+
+    <TextView
+        android:id="@+id/mi_item_plugin_folder"
+        android:layout_width="81dp"
+        android:layout_height="10dp"
+        android:gravity="top|left|center"
+        android:textSize="8sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="@+id/mi_item_item_name"
+        app:layout_constraintTop_toBottomOf="@+id/mi_item_item_name"
+        tools:text="Cartella: 000" />
 
     <ImageView
         android:id="@+id/mi_item_flag"
@@ -72,6 +87,57 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/chinese_flag" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:text="@string/miitem_installed_version_label"
+        android:textColor="?android:attr/colorEdgeEffect"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/mi_item_plugin_version"
+        app:layout_constraintStart_toStartOf="@+id/mi_item_plugin_notify" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:gravity="center"
+        android:text="@string/miitem_latest_version_label"
+        android:textColor="?android:attr/colorEdgeEffect"
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/mi_item_plugin_latest_version"
+        app:layout_constraintStart_toEndOf="@+id/textView2" />
+
+    <TextView
+        android:id="@+id/mi_item_plugin_notify"
+        android:layout_width="160dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="12dp"
+        android:gravity="top|center_horizontal"
+        android:textSize="10sp"
+        app:layout_constraintEnd_toStartOf="@+id/mi_item_flag"
+        app:layout_constraintStart_toEndOf="@+id/mi_item_image"
+        app:layout_constraintTop_toBottomOf="@+id/mi_item_item_name"
+        tools:text="Notifica" />
+
+    <ImageView
+        android:id="@+id/mi_icon_status"
+        android:layout_width="15dp"
+        android:layout_height="17dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/mi_item_image"
+        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:srcCompat="@drawable/xc_rdot" />
 
 
 </android.support.constraint.ConstraintLayout>
