--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#247be7</color>
 
     <color name="darkText">#333333</color>
+    <color name="separator_grey">#585858</color>
     <color name="lightText">#999999</color>
     <color name="separator">#cecece</color>
     <color name="mihome_item_background">#f5f5f5</color>
